Bug 68968 - [BayTrail-M bisect]gnome-session fails to start
Summary: [BayTrail-M bisect]gnome-session fails to start
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium major
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-05 08:46 UTC by ye.tian
Modified: 2015-05-20 01:27 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg.log (118.64 KB, text/plain)
2013-09-05 08:46 UTC, ye.tian
no flags Details
Xorg.0.log (20.27 KB, text/plain)
2013-09-05 08:46 UTC, ye.tian
no flags Details

Description ye.tian 2013-09-05 08:46:21 UTC
Created attachment 85232 [details]
dmesg.log

Environment:
------------------------------------
Libdrm:	(master)libdrm-2.4.46-34-gd18cd0c7ccf88c9f6585aaa3cc57f0f064d7310b
Mesa:	(master)644fbbd3ebe58ee2237395904f83e085f221d52d
Xserver:(master)xorg-server-1.14.99.1-193-g94d4e29aedc69431fa9b299ca1b67947173d7a24
Xf86_video_intel:(master)2.21.15-67-g47e718bf321f6fe80dc5f797f433b00bc8de91c7
Cairo:	(master)59e2a93b3c8a7b83d537bb2a4bbdd5f0f36a0cbc
Libva:	(staging)9afa699796c1221ee0c188f490d844af4105b447
Libva_intel_driver:(staging)42bb613e72d235bcbe141c906dec9431e4c29661
Kernel: (drm-intel-next-queued) 7a8c0b719b52dfb8ab8daec866c7ca3a5acc8875

Platform:  bay trail –M  
BIOS: V55_31 64bit    
OS: Fedora 19 X86_64

Bug detailed description:
--------------------------
Gnome-session fails to start on BYT-M, this issue happens on drm-intel-next-queued branch.
By bisected, the first bad commit is b0135d2. 
commit b0135d2b287424cceeebe79ef81fd1e6425509a3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Aug 26 20:58:12 2013 +0100

drm/i915: Use RCS flips on Ivybridge+

Please see dmesg.log and  Xorg.0.log attached.

Reproduce steps:
----------------------------
1, xinit&
2, gnome-session
Comment 1 ye.tian 2013-09-05 08:46:51 UTC
Created attachment 85233 [details]
Xorg.0.log
Comment 2 Chris Wilson 2013-09-05 10:34:17 UTC
See https://patchwork.kernel.org/patch/2853582/
Comment 3 Daniel Vetter 2013-09-05 14:42:48 UTC
Please test Chris' patch.
Comment 4 ye.tian 2013-09-06 02:07:05 UTC
it works well on this patch.
Comment 5 Chris Wilson 2013-09-08 14:56:37 UTC
commit 1c5fd08520de35c7ac0d70e2ed3c3bb200830447
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Sep 4 10:54:30 2013 +0100

    drm/i915: Confine page flips to BCS on Valleyview
    
    Once again we find that Valleyview is ever so subtlety different from
    the rest of its gen7 brethen. In this case, Valleyview has no support
    for pageflipping from the RCS ring.
    
    Fixes a regression from
    
    commit ffe74d75502e3a9b0791240b5562bcbecc6ab8dc
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Mon Aug 26 20:58:12 2013 +0100
    
        drm/i915: Use RCS flips on Ivybridge+
    
    Reported-by: "Lee, Chon Ming" <chon.ming.lee@intel.com>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=68968
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.